components/default/garage-app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  annotations:
    gethomepage.dev/href: "https://s3.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/garage.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["s3.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: garage
          port: 3900
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-ui
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  annotations:
    gethomepage.dev/href: "https://garage-ui.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/garage.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["garage-ui.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: garage
          port: 3909
